# mangadex-oauth2-rs-example

./: Cargo.toml
src/: main.rs  openid_conf.rs
