[package]
name = "oauth-mangadex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oauth2 = { version = "4.3.0" }
anyhow = "1.0.69"
url = "2.3.1"
reqwest = {version = "0.11.14" }
serde = "1.0.152"
serde_json = "1.0.93"
tokio = { version =  "1.25.0", features = ["full"]}
once_cell = "1.17.1"